--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -5,7 +5,10 @@
             <li class="customer_item">
                 <div class="customer_container">
         <img src="./images/reviews/reviews-1_sm.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
+        <div class="element_before">
+                    <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+
+        </div>
         <svg class="pagination" width="50" height="4">
             <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
         </svg>
@@ -33,7 +36,7 @@
             <li class="customer_item ">
                 <div class="customer_container">
         <img src="./images/reviews/reviews-2_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
+        <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
         <svg class="pagination" width="50" height="4">
             <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
         </svg>
@@ -61,7 +64,7 @@
             <li class="customer_item ">
                 <div class="customer_container">
         <img src="./images/reviews/reviews-3_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
+        <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
         <svg class="pagination" width="50" height="4">
             <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
         </svg>
