--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -1,17 +1,23 @@
 .customer_container {
-  color: $primary-text-color;
+  color: $black-color;
+  max-width: 480px;
 }
 .customer_img {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 32px;
 }
+.element_before{
+background-color: $reviews-background-color;
+z-index: -10;
+}
 .customer_title {
+  position: relative;
   font-family: $primary-font;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.86;
-  background-color: $reviews-background-color;
+  
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 20px;
@@ -19,13 +25,18 @@
   margin-bottom: 16px;
 }
 .customer_title::before {
-  content: '';
-  width: 54px;
-height: 40px;
-left: 127px;
-top: 4509px;
-
-background: $complementary-color;
+    position: absolute;
+    content: "";
+    background-image: url(../images/icons/“.svg);
+    background-size: 54px 40px;
+    fill: #000;
+    height: 54px;
+    width: 60px;
+    display: block;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    top: 8px;
+    z-index: -1;
 }
 .pagination{
   margin-bottom: 16px;
