--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -41,6 +41,9 @@
 
   &--first {
     padding-top: 13.75vw;
+    @media screen and (min-width: 480px) {
+      padding-top: 66px;
+    }
     @media screen and (min-width: 768px) {
       padding-top: 109px;
     }
@@ -51,6 +54,9 @@
 
   &--second {
     padding-top: 8.75vw;
+    @media screen and (min-width: 480px) {
+      padding-top: 42px;
+    }
     @media screen and (min-width: 768px) {
       padding-top: 67px;
     }
@@ -63,6 +69,9 @@
   }
   &--fourth {
     padding-top: 9.7vw;
+    @media screen and (min-width: 480px) {
+      padding-top: 46.56px;
+    }
     @media screen and (min-width: 768px) {
       padding-top: 75px;
     }
@@ -73,6 +82,9 @@
 
   &--fifth {
     padding-top: 6.6vw;
+    @media screen and (min-width: 480px) {
+      padding-top: 31.68px;
+    }
     @media screen and (min-width: 768px) {
       padding-top: 50px;
     }
@@ -83,6 +95,9 @@
 
   &--sixth {
     padding-top: 15.3vw;
+    @media screen and (min-width: 480px) {
+      padding-top: 73.44px;
+    }
     @media screen and (min-width: 768px) {
       padding-top: 117px;
     }
@@ -93,6 +108,7 @@
 }
 .gallery__img {
   width: 100%;
+  transition: transform 250ms ease-in-out;
 
   &--top {
     margin-bottom: 1vw;
@@ -106,5 +122,10 @@
 
   &--bottom {
     width: 48.76%;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.25);
   }
 }
