--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,52 +2,55 @@
   <div class="about__container container">
     <p class="about__subtitle">TRADITION AND LOVE</p>
     <h2 class="about__title">HOW IT'S MADE?</h2>
-    <img
-      class="about__image"
-      srcset="
-        ../src/images/about/about-1_sm.png    1x,
-        ../src/images/about/about-1_sm@2x.png 2x
-      "
-      src="../src/images/about/about-1_sm.png"
-      alt="cow with milk"
-    />
-    <div class="about__text">
-      <!-- <div class="about__only-text"> -->
-      <p class="about__text--first">
-        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-        justo fringilla.
-      </p>
-      <p class="about__text--second">
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-        tincidunt.<br /><br />Aliquam erat volutpat. Aenean accumsan.
-      </p>
-      <!-- </div> -->
+    <div class="about__section">
       <img
-        class="about__img"
+        class="about__image"
         srcset="
-          ../src/images/about/about-2_sm.png    1x,
-          ../src/images/about/about-2_sm@2x.png 2x
+          ../src/images/about/about-1_sm.png    1x,
+          ../src/images/about/about-1_sm@2x.png 2x
         "
-        src="../src/images/about/about-2_sm.png"
-        alt="milk"
+        src="../src/images/about/about-1_sm.png"
+        alt="cow with milk"
       />
+      <div class="content">
+        <div class="about__text">
+          <p class="about__text--first">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
+            justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
+            erat at justo fringilla.
+          </p>
+          <p class="about__text--second">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio
+            elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
+            euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
+            massa nibh, tincidunt.<br /><br />Aliquam erat volutpat. Aenean
+            accumsan.
+          </p>
+          <img
+            class="about__img"
+            srcset="
+              ../src/images/about/about-2_sm.png    1x,
+              ../src/images/about/about-2_sm@2x.png 2x
+            "
+            src="../src/images/about/about-2_sm.png"
+            alt="milk"
+          />
+        </div>
+        <button class="about__btn" type="button">
+          Read more
+          <svg
+            class="about__icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 256 512"
+            width="7"
+            height="14"
+          >
+            <path
+              d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
-  <button class="about__btn" type="button">
-    Read more
-    <svg
-      class="about__icon"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 256 512"
-      width="7"
-      height="14"
-    >
-      <path
-        d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
-      />
-    </svg>
-  </button>
 </section>
