--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,67 +1,63 @@
 <section class="footer">
   <div class="footer__holder container">
+    <div class="footer__holder-titles">
+      <div class="footer__title">
+        <p class="footer__upper-title">homemade ice cream made</p>
+        <h2 class="footer__main-title">with passion</h2>
+      </div>
+      <div class="footer__holder-contacts">
+        <ul class="footer__icons-list socials">
+          <li class="footer__icons-item socials__item">
+            <a
+              class="footer__icons-link socials__link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Github icon"
+            >
+              <svg class="footer__icons-picture socials__picture">
+                <use href="./images/icons/symbol-defs.svg#icon-github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__icons-item socials__item">
+            <a
+              class="footer__icons-link socials__link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Telegram icon"
+            >
+              <svg class="footer__icons-picture socials__picture">
+                <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__icons-item socials__item">
+            <a
+              class="footer__icons-link socials__link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Facebook icon"
+            >
+              <svg class="footer__icons-picture socials__picture">
+                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
 
-    <div class="footer__title">
-      <p class="footer__upper-title">homemade ice cream made</p>
-      <h2 class="footer__main-title">with passion</h2>
+        <div class="footer__contacts">
+          <a class="footer__contacts-phone link" href="tel:+610383766284"
+            >Feel free to contact
+            <span class="footer__contacts-phone--accent"
+              >+61 (0) 383 766 284</span
+            ></a
+          >
+        </div>
+      </div>
     </div>
-    <ul class="footer__icons-list socials">
-      <li class="footer__icons-item socials__item">
-        <a
-          class="footer__icons-link socials__link"
-          href=""
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Github icon"
-        >
-          <svg
-            class="footer__icons-picture socials__picture"           
-          >
-            <use href="./images/icons/symbol-defs.svg#icon-github" ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer__icons-item socials__item">
-        <a
-          class="footer__icons-link socials__link"
-          href=""
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Telegram icon"
-        >
-          <svg
-            class="footer__icons-picture socials__picture"          
-          >
-            <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer__icons-item socials__item">
-        <a
-          class="footer__icons-link socials__link"
-          href=""
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Facebook icon"
-        >
-          <svg
-            class="footer__icons-picture socials__picture"
-          >
-            <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    
-    <div class="footer__contacts">
-      <a class="footer__contacts-phone link" href="tel:+610383766284"
-        >Feel free to contact
-        <span class="footer__contacts-phone--accent"
-          >+61 (0) 383 766 284</span
-        ></a
-      >
-    </div>
-
     <div class="footer__sign">
       <p class="footer__sign-text">&#169; 2022 - IceCream.</p>
       <p class="footer__sign-text">All Rights Reserved.</p>
