--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,30 +2,32 @@
   padding-top: 40px;
   padding-bottom: 3px;
   background-color: $primary-background-color;
-  border: 1px solid $black-color;
-  border-top: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.footer__holder-titles {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
 }
 
 .footer__title {
   text-align: left;
-  justify-content: right; 
+  justify-content: right;
   margin-bottom: 40px;
   width: 234px;
 
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
-   
-    margin-right: 165px;
+    margin: 0;
   }
 
   @media screen and (min-width: 1200px) {
-     margin-bottom: 0; 
-     margin-right: 52px;
-    
-   width: auto;
-}
+    margin-bottom: 0;
+    width: auto;
+  }
 }
 
 .footer__upper-title {
@@ -40,15 +42,15 @@
 
   @media screen and (min-width: 768px) {
     font-size: 26px;
-    line-height:1.5;
+    line-height: 1.5;
     letter-spacing: 0.04em;
   }
 
   @media screen and (min-width: 1200px) {
     font-size: 30px;
-  line-height:1.13;
-
-}}
+    line-height: 1.13;
+  }
+}
 
 .footer__main-title {
   font-family: $second-font;
@@ -59,7 +61,7 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $title-text-color;
-  
+
   @media screen and (min-width: 768px) {
     font-size: 48px;
     letter-spacing: 0.06em;
@@ -68,7 +70,16 @@
   @media screen and (min-width: 1200px) {
     font-size: 58px;
     line-height: 1.4;
+  }
 }
+
+.footer__holder-contacts {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    justify-content: center;
+  }
 }
 
 .footer__icons-list {
@@ -76,8 +87,8 @@
   align-items: center;
   justify-content: right;
   margin-bottom: 40px;
- 
- @media screen and (min-width: 768px) {
+
+  @media screen and (min-width: 768px) {
     margin-bottom: 0;
   }
 }
@@ -87,7 +98,6 @@
   &:last-child {
     margin-right: 0;
   }
-
 }
 
 .footer__icons-link {
@@ -97,15 +107,16 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
+  cursor: pointer;
   background-color: $icon-color;
 
   &:hover,
   &:focus {
-    fill: $title-text-color;
+    background-color: #d41443;
   }
+
   @media screen and (min-width: 768px) {
     margin-bottom: 47px;
-
   }
 }
 
@@ -114,10 +125,20 @@
   justify-content: center;
   align-items: center;
 }
-.footer__contacts{
+
+.footer__contacts {
   text-align: right;
   margin-bottom: 40px;
 
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: right;
+
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__contacts-phone {
@@ -136,11 +157,12 @@
 .footer__sign {
   border-top: 1px solid $complementary-color;
   padding-top: 16px;
-  padding-left: 0;padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
   @media screen and (min-width: 768px) {
-  display: flex;
-  justify-content: center;
-}
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .footer__sign-text {
@@ -153,12 +175,13 @@
   color: $primary-text-color;
 
   @media screen and (min-width: 768px) {
-margin-right: 4px;
-&:last-child {
-  margin-right: 0;
-} 
-}
+    margin-right: 4px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 
-@media screen and (min-width: 1200px) {
-line-height: 1.86;}
+  @media screen and (min-width: 1200px) {
+    line-height: 1.86;
+  }
 }
