--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -89,7 +89,10 @@
 
   @media screen and (min-width: 768px) {
     display: none;
-    padding-left: 0px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: block;
   }
 }
 
