--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -36,7 +36,12 @@
             alt="milk"
           />
         </div>
-        <button class="about__btn" type="button">
+        <button
+          class="about__btn"
+          type="button"
+          name="Read more"
+          data-modal-open
+        >
           Read more
           <svg
             class="about__icon"
@@ -54,3 +59,33 @@
     </div>
   </div>
 </section>
+
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button data-modal-close class="close-button" type="button">
+      <svg
+        class="close-icon"
+        xmlns="http://www.w3.org/2000/svg"
+        width="11"
+        height="11"
+        viewBox="0 0 320 512"
+      >
+        <path
+          d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
+        />
+      </svg>
+    </button>
+    <form class="form">
+      <span class="form-text">Оставьте свои данные, мы вам перезвоним</span>
+      <div class="data">
+        <label class="field"> </label>
+        <label class="field"> </label>
+      </div>
+      <div class="sub">
+        <button class="submit" type="submit">Отправить</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<script src="./js/modal.js"></script>
