--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -36,12 +36,7 @@
             alt="milk"
           />
         </div>
-        <button
-          class="about__btn"
-          type="button"
-          name="Read more"
-          data-modal-open
-        >
+        <button class="about__btn" type="button" name="Read more">
           Read more
           <svg
             class="about__icon"
@@ -60,7 +55,7 @@
   </div>
 </section>
 
-<div class="backdrop is-hidden" data-modal>
+<!-- <div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button data-modal-close class="close-button" type="button">
       <svg
@@ -88,4 +83,4 @@
   </div>
 </div>
 
-<script src="./js/modal.js"></script>
+<script src="./js/modal.js"></script> -->
