--- a/src/sass/components/_advantage.scss
+++ b/src/sass/components/_advantage.scss
@@ -1,6 +1,15 @@
 .advantage {
   background-color: $primary-background-color;
-  padding-left: 20px;
+
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-bottom: 64px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 120px;
+  }
 
   &__list {
     @media screen and (min-width: 768px) {
@@ -35,14 +44,29 @@
     line-height: 1.13;
     letter-spacing: 0.04em;
     text-transform: uppercase;
+    text-align: left;
+
+    @media screen and (max-width: 767px) {
+      &:not(:last-child) {
+        margin-bottom: 32px;
+      }
+    }
 
     color: $title-text-color;
 
-    margin-bottom: 32px;
+    /*&:nth-child(n + 1)::before {
+      content: ' ';
+      display: block;
+
+      background-image: url(../images/advantages/advantages-1.png);
+
+      height: 50px;
+      min-width: 50px;
+      background-repeat: no-repeat;
+    }*/
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       font-size: 48px;
-      margin-bottom: 23px;
       &:not(:last-child) {
         margin-right: 4px;
       }
@@ -53,7 +77,7 @@
 
     @media screen and (min-width: 1200px) {
       font-size: 58px;
-      margin-bottom: 23px;
+
       &:not(:last-child) {
         margin-right: 80px;
       }
