--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,11 +6,65 @@
             <li class="products-list__item">
                 <div class="products-list__container">
                     <h3 class="products-list__title">ice cream</h3>
-                    <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod
-                        tempor incididunt ut labore et. dolore magna
-                        aliqua facilisis.</p>
-                    <button class="products-list__btn" type="button">&#10142</button>
+                    <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <p class="products-list__text-hidden">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="btn products-list__btn" type="button" aria-label="description" data-menu-button>
+                        <svg class="products-list__icon-arrow" width="15" height="15">
+                            <use href="./images/icons/arrow.svg#arrow-right"></use>
+                            <!-- <use href="./images/icon/sprite.svg#modal-btn"></use> -->
+                        </svg>
+                        <!-- ../images/icons/arrow.svg#arrow-right -->
+                        <!-- <svg class="products-list__icon-cross" width="15" height="15">
+                            <use href="./images/icon/sprite.svg#modal-btn"></use>
+                        </svg> -->
+                    </button>
+                </div>
+            </li>
+            <li class="products-list__item">
+                <div class="products-list__container">
+                    <h3 class="products-list__title">ice cream</h3>
+                    <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <p class="products-list__text-hidden">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="btn products-list__btn" type="button" aria-label="description" data-menu-button>
+                        <svg class="products-list__icon-arrow" width="15" height="15">
+                            <use href="./images/icons/arrow.svg#arrow-right"></use>
+                            <!-- <use href="./images/icon/sprite.svg#modal-btn"></use> -->
+                        </svg>
+                        <!-- <svg class="products-list__icon-cross" width="15" height="15">
+                            <use href="./images/icon/sprite.svg#modal-btn"></use>
+                        </svg> -->
+                    </button>
+                </div>
+            </li>
+            <li class="products-list__item">
+                <div class="products-list__container">
+                    <h3 class="products-list__title">ice cream</h3>
+                    <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <p class="products-list__text-hidden">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. Lorem ipsum
+                        dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="btn products-list__btn" type="button" aria-label="description" data-menu-button>
+                        <svg class="products-list__icon-arrow" width="15" height="15">
+                            <use href="./images/icons/arrow.svg#arrow-right"></use>
+                            <!-- <use href="./images/icon/sprite.svg#modal-btn"></use> -->
+                        </svg>
+                        <!-- <svg class="products-list__icon-cross" width="15" height="15">
+                            <use href="./images/icon/sprite.svg#modal-btn"></use>
+                        </svg> -->
+                    </button>
                 </div>
             </li>
 
