edits the color palette

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -23,8 +23,8 @@
     line-height: 1.15;
 
 
-    // color: $text-decoration-color;
-    color: aqua;
+    color: $text-decoration-color;
+    // color: aqua;
 }
 
 .products__title {
@@ -32,13 +32,13 @@
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         margin-bottom: 158px;
-        // Font size: 48px Line height: 55px
+
         font-size: 48px;
     }
 
     @media screen and (min-width: 1200px) {
         margin-bottom: 261px;
-        // Font size: 58px Line height: 66px
+
         font-size: 58px;
         line-height: 1.14;
     }
@@ -50,8 +50,8 @@
     line-height: 1.15;
     letter-spacing: 0.04em;
 
-    // color: $title-text-color;
-    color: red;
+    color: $title-text-color;
+    // color: red;
 
 }
 
@@ -96,8 +96,8 @@
 
 .products-list__container {
     // position: relative;
-    // background-color: $products1-background-color;
-    background-color: tomato;
+    background-color: $products1-background-color;
+    // background-color: tomato;
     // height: 489px;
     border-radius: 24px;
     // position: absolute;
@@ -116,8 +116,8 @@
     }
 
     // overflow: hidden;
-    // color: $white-color;
-    color: white;
+    color: $white-color;
+    // color: white;
 
 }
 
