--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -1,5 +1,5 @@
 .customer_container {
-  
+
   color: $black-color;
   max-width: 480px;
 }
@@ -36,7 +36,8 @@ z-index: -10;
     display: block;
     background-position: 50%;
     background-repeat: no-repeat;
-    top: 8px;
+    top: 0;
+    left:32px;
     z-index: 1;
 }
 .pagination{
@@ -50,6 +51,16 @@ z-index: -10;
   margin-bottom: 16px;
 }
 
+.customer_text::before {
+  content: "";
+  display: block;
+  background-image: url(../images/icons/icon-threedots.svg);
+  background-size: 32px 4px;
+  margin: 0 auto 15px;
+  width: 32px;
+  height: 4px;
+}
+
 .customer__list__svg{
   display: flex;
   justify-content: center;
@@ -60,4 +71,3 @@ z-index: -10;
 .icon-threedots-white{
   fill: $reviews2-icon-color;
 }
- 
