--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,22 @@
-<header>
-    <div></div>
-</header>
+<header class="header-hero">
+    <div class="container">
+        <nav class="header-hero__section">
+            <a class="header-hero__logo" href="index.html">
+                <svg class="header-hero__icon">
+                    <use href="./images/icons/logo.svg" width="199" heidth="50"></use>
+                </svg>
+            </a>
+            <div class="header-hero__menu">
+                <ul class="header-hero__list">
+                    <li class="header-hero__item"><a href="" class="header-hero__link">Home</a></li>
+                    <li class="header-hero__item"><a href="" class="header-hero__link">About us</a></li>
+                    <li class="header-hero__item"><a href="" class="header-hero__link">How it’s made?</a></li>
+                    <li class="header-hero__item"><a href="" class="header-hero__link">Our products</a></li>
+                    <li class="header-hero__item"><a href="" class="header-hero__link">Contact</a></li>
+                </ul>
+
+                <button type="button" class="header-hero__btn">Buy now</button>
+        </nav>
+    </div>
+
+    </div>
