Сделан основной массив

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,7 +7,7 @@
             <li class="contacts-section__item">
                 <p class="contacts-section__text">CAFE</p>
                 <ul class="contacts-section__list__location">
-                    <li class="contacts-section__item__location">New York</li>
+                    <li class="contacts-section__item__location">Chicago</li>
                     <li class="contacts-section__item__about">Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </li>
                 </ul>
@@ -104,10 +104,16 @@
         </ul>
         <ul class="contacts-section__list__button">
             <li class="contacts-section__item__button__location">
-                <button class="contacts-section__button__location" type="button">Our Locations</button>
+                <button class="contacts-section__button__location" type="button">Our Locations<svg class="location__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" width="7" height="14">
+                    <path
+                        d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z" />
+                </svg></button>
             </li>
             <li class="contacts-section__item__button__franchise">
-                <button class="contacts-section__button__franchise" type="button">Franchise</button>
+                <button class="contacts-section__button__franchise" type="button">Franchise<svg class="franchise__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" width="7" height="14">
+                    <path
+                        d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z" />
+                </svg></button>
             </li>
         </ul> 
     </div>
