--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,91 +1,267 @@
 <section class="customer">
-    <div class="container">
-        <h2 class="customer_title visually-hidden">Customer reviews</h2>
-        <ul class="customer_list">
-            <li class="customer_item">
-                <div class="customer_container">
-        <img src="./images/reviews/reviews-1_sm.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <div class="element_before">
-                    <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-
+  <h2 class="customer__title visually-hidden">Customer reviews</h2>
+  <div class="container container__customer__review">
+    <ul class="customer__list visually-hidden">
+      <li class="customer__item">
+        <img
+          src="./images/reviews/reviews-1_sm.png"
+          alt="customer"
+          class="customer__img"
+          width="85"
+          height="85"
+        />
+        <div class="customer__container">
+          <p class="customer__title">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
         </div>
-        
-        
-        <p class="customer_text">Emily, Los Angeles</p> 
-        <ul class="customer__list__svg">
-            <li class="customer__item__svg">
-                <svg class="customer__svg__icon" width="13" height="13">
-                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
-                </svg>
-            </li>
-            <li class="customer__item__svg">
-                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
-                </svg>
-            </li>
-            <li class="customer__item__svg">
-                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
-                </svg>
-            </li>
-        </ul> 
-    </div>
-</li>
-            <li class="customer_item ">
-                <div class="customer_container">
-        <img src="./images/reviews/reviews-2_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-        <p class="customer_text">Rose, San Bernardino</p>  
-        <ul class="customer__list__svg">
 
-            <li class="customer__item__svg">
-                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
-                </svg>
-            </li>
-             <li class="customer__item__svg">
+        <p class="customer__text">Emily, Los Angeles</p>
+        <ul class="customer__list__svg">
+          <li class="customer__item__svg">
+            <svg class="customer__svg__icon" width="14" height="14">
+              <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+            </svg>
+          </li>
+          <li class="customer__item__svg">
+            <svg
+              class="customer__svg__icon icon-threedots-white"
+              width="12"
+              height="12"
+            >
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+          <li class="customer__item__svg">
+            <svg
+              class="customer__svg__icon icon-threedots-white"
+              width="12"
+              height="12"
+            >
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+        </ul>
+      </li>
+      <li class="customer__item">
+        <img
+          src="./images/reviews/reviews-2_lg.png"
+          alt="customer"
+          class="customer__img"
+          width="85"
+          height="85"
+        />
+        <div class="customer__container">
+          <p class="customer__title">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <p class="customer__text">Rose, San Bernardino</p>
+        <ul class="customer__list__svg">
+          <li class="customer__item__svg">
+            <svg
+              class="customer__svg__icon icon-threedots-white"
+              width="12"
+              height="12"
+            >
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+          <li class="customer__item__svg">
+            <svg class="customer__svg__icon" width="14" height="14">
+              <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+            </svg>
+          </li>
+          <li class="customer__item__svg">
+            <svg
+              class="customer__svg__icon icon-threedots-white"
+              width="12"
+              height="12"
+            >
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+        </ul>
+      </li>
+      <li class="customer__item">
+        <img
+          src="./images/reviews/reviews-3_lg.png"
+          alt="customer"
+          class="customer__img"
+          width="85"
+          height="85"
+        />
+        <div class="customer__container">
+          <p class="customer__title">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <p class="customer__text">Kate, San Francisco</p>
+        <ul class="customer__list__svg">
+          <li class="customer__item__svg icon-threedots-white">
+            <svg class="customer__svg__icon" width="12" height="12">
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+
+          <li class="customer__item__svg icon-threedots-white">
+            <svg class="customer__svg__icon" width="12" height="12">
+              <use href="./images/icons/symbol-defs.svg#pagination"></use>
+            </svg>
+          </li>
+          <li class="customer__item__svg">
+            <svg class="customer__svg__icon" width="14" height="14">
+              <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+            </svg>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <!-- Slider main container -->
+    <div class="wrapper">
+      <input type="radio" name="point" id="slide1" checked />
+      <input type="radio" name="point" id="slide2" />
+      <input type="radio" name="point" id="slide3" />
+
+      <div class="slider">
+        <div class="slides slide1">
+          <li class="customer__item">
+            <img
+              src="./images/reviews/reviews-1_sm.png"
+              alt="customer"
+              class="customer__img"
+              width="85"
+              height="85"
+            />
+            <div class="customer__container">
+              <p class="customer__title">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+
+            <p class="customer__text">Emily, Los Angeles</p>
+            <ul class="customer__list__svg">
+              <li class="customer__item__svg">
                 <svg class="customer__svg__icon" width="14" height="14">
-                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+                  <use href="./images/icons/symbol-defs.svg#icon-home"></use>
                 </svg>
-            </li>
-            <li class="customer__item__svg">
-                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+              </li>
+              <li class="customer__item__svg">
+                <svg
+                  class="customer__svg__icon icon-threedots-white"
+                  width="12"
+                  height="12"
+                >
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
                 </svg>
-            </li>
-        </ul>
-    </div>
-</li>
-            <li class="customer_item ">
-                <div class="customer_container">
-        <img src="./images/reviews/reviews-3_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
-        <p class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-        <p class="customer_text">Kate, San Francisco</p>  
-        <ul class="customer__list__svg">
+              </li>
+              <li class="customer__item__svg">
+                <svg
+                  class="customer__svg__icon icon-threedots-white"
+                  width="12"
+                  height="12"
+                >
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+              </li>
+            </ul>
+          </li>
+        </div>
+        <div class="slides slide2">
+          <li class="customer__item">
+            <img
+              src="./images/reviews/reviews-2_lg.png"
+              alt="customer"
+              class="customer__img"
+              width="85"
+              height="85"
+            />
+            <div class="customer__container">
+              <p class="customer__title">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <p class="customer__text">Rose, San Bernardino</p>
+            <ul class="customer__list__svg">
+              <li class="customer__item__svg">
+                <svg
+                  class="customer__svg__icon icon-threedots-white"
+                  width="12"
+                  height="12"
+                >
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+              </li>
+              <li class="customer__item__svg">
+                <svg class="customer__svg__icon" width="14" height="14">
+                  <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+                </svg>
+              </li>
+              <li class="customer__item__svg">
+                <svg
+                  class="customer__svg__icon icon-threedots-white"
+                  width="12"
+                  height="12"
+                >
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+              </li>
+            </ul>
+          </li>
+        </div>
+        <div class="slides slide3">
+          <li class="customer__item">
+            <img
+              src="./images/reviews/reviews-3_lg.png"
+              alt="customer"
+              class="customer__img"
+              width="85"
+              height="85"
+            />
+            <div class="customer__container">
+              <p class="customer__title">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <p class="customer__text">Kate, San Francisco</p>
+            <ul class="customer__list__svg">
+              <li class="customer__item__svg icon-threedots-white">
+                <svg class="customer__svg__icon" width="12" height="12">
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+              </li>
 
-            <li class="customer__item__svg icon-threedots-white">
+              <li class="customer__item__svg icon-threedots-white">
                 <svg class="customer__svg__icon" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                  <use href="./images/icons/symbol-defs.svg#pagination"></use>
                 </svg>
-            </li>
-         
-            <li class="customer__item__svg icon-threedots-white">
-                <svg class="customer__svg__icon" width="12" height="12">
-                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+              </li>
+              <li class="customer__item__svg">
+                <svg class="customer__svg__icon" width="14" height="14">
+                  <use href="./images/icons/symbol-defs.svg#icon-home"></use>
                 </svg>
-            </li>
-             <li class="customer__item__svg">
-                <svg class="customer__svg__icon" width="13" height="13">
-                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
-                </svg>
-            </li>              
-        </ul>
+              </li>
+            </ul>
+          </li>
+        </div>
+      </div>
+      <div class="controls">
+        <label for="slide1"></label>
+        <label for="slide2"></label>
+        <label for="slide3"></label>
+      </div>
     </div>
-</li>
-        </ul>
-    
-  <!-- Slider main container -->
-  
-  </div> 
-  
+  </div>
 </section>
