--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -214,7 +214,6 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.31;
-    color: $white-color;
 
     min-width: 162px;
     background-color: $button-color;
@@ -292,7 +291,7 @@
     left:140px;
     top: 50%;
     transform: translate(-50%, -50%);
-
+    color: currentColor;
     fill: $white-color;
 
     @media screen and (min-width: 768px) {
@@ -318,4 +317,8 @@
     @media screen and (min-width: 768px) {
         left: 127px;
         }
+}
+
+.contacts-section__button__location__map.link {
+    color:$white-color ;
 }
