--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
-<section class="about">
+<section class="about" id="about">
   <div class="about__container container">
     <p class="about__subtitle">TRADITION AND LOVE</p>
-    <h2 class="about__title">HOW IT'S MADE?</h2>
+    <h2 class="about__title" id="it’s made">HOW IT'S MADE?</h2>
     <div class="about__section">
       <img
         class="about__image"
