--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts-section section">
+<section class="contacts-section section" id="contacts">
     <div class="contacts-container container">
         <h2 class="contacts-section__title never">contacts</h2>
         <ul class="contacts-section__list__container">
